...
            "state": "translated",
            "value": "App"
          }
        }
      }
    },
    "Attempts left:": {
      "localizations": {
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Yrityksiä jäljellä:"
          }
...
            "state": "translated",
            "value": "Anslut en kortläsare"
          }
        }
      }
    },
    "Connect a card reader and insert your card.": {
      "localizations": {
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Kytke kortinlukija ja laita henkilökortti siihen."
          }
...
            "state": "translated",
            "value": "verifierad under den här sessionen"
          }
        }
      }
    },
    "PIN Codes": {
      "localizations": {
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Tunnusluvut"
          }
...
            "state": "translated",
            "value": "Parkopplingen är låst. Försök igen om %llu s."
          }
        }
      }
    },
    "The pairing code is invalid": {
      "localizations": {
        "fi": {
          "stringUnit": {
            "state": "translated",
            "value": "Koodi ei kelpaa"
          }
...
